<resources>
    <string name="app_name">Billy Soomro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_name">Billy Soomro</string>
    <string name="personal_profile">Professional Profile</string>
    <string name="personal_profile_text">An enthusiastic, self-motivated and recent MSc graduate seeking opportunities to leverage and develop his academic and professional experience in a fast-paced, stimulating and challenging environment. Culturally sensitive with extensive international exposure having lived and studied in numerous countries with excellent written, communication and interpersonal skills. Possesses a versatile skill set that includes software development, web development, database management and project management.</string>
    <string name="education">Education</string>
    <string name="skill_set">Skill set</string>
    <string name="experience">Experience</string>
    <string name="references">References</string>
    <string name="contact">Contact</string>
    <string name="degree">MSc Graduate</string>
    <string name="action_settings">Settings</string>





    <string name="company1">StexFGiving</string>
    <string name="company1_position">Web Developer</string>
    <string name="company1_timeline">July 2015 - Present</string>
    <string name="company1_responsibilities">Currently working as a Front-End Web Developer at StexFGiving; a start-up Social Enterprise working on creating an online platform that accelerates social change. My core responsibilities include developing websites using hand coded HTML5, CSS3 and basic JavaScript. Working with CMS’ such as WordPress to create and customize websites according to detailed designs.</string>

    <string name="company2">Adina</string>
    <string name="company2_position">IT Administrator</string>
    <string name="company2_timeline">November 2015 - December 2015</string>
    <string name="company2_responsibilities">My core responsibilities as IT Administrator involved maintaining the office\'s IT Infrastructure to ensure day to day running of business. I was also responsible for investigating and diagnosing IT related problems, routine configuration and installation of peripherals and making recommendations for improving the company\'s IT Infrastructure.</string>>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
